2013-06-18 belangeo <belangeo@gmail.com>

    * Added new object: PVFilter. Spectral filtering.
    - rev 1119

2013-06-18 belangeo <belangeo@gmail.com>

    * Added new object: PVCross, PVMult, PVMorph. Spectral morphing.
    - rev 1117

2013-06-13 belangeo <belangeo@gmail.com>

    * Added new object: PVAddSynth, Phase Vocoder additive synthesis object.
    - rev 1116

2013-06-11 belangeo <belangeo@gmail.com>

    * Phase Vocoder, first draft. PVAnal, PVSynth, PVTranspose, PVVerb and PVGate.
    - rev 1114

2013-05-27 belangeo <belangeo@gmail.com>

    * E-Pyo: Added "Search in Project Files" option.
    - rev 1108

2013-05-24 belangeo <belangeo@gmail.com>

    * E-Pyo: Added Filters Menu. User-defined text processing functions.
    - rev 1107

2013-05-23 belangeo <belangeo@gmail.com>

    * Now using Sphinx to generate the API documentation.
    - rev 1105

2013-05-15 belangeo <belangeo@gmail.com>

    * Added new objects: ButLP, ButHP, ButBP, ButBR, second-order Butterworth filters.
    - rev 1104

2013-05-09 belangeo <belangeo@gmail.com>

    * Added new objects: Reson and Resonx, second-order resonant bandpass filters.
    - rev 1102

-------------------------------------------------------------------------------------

2013-05-08 belangeo <belangeo@gmail.com>

    * Release tag: 0.6.6.
    - rev 1100

2013-05-08 belangeo <belangeo@gmail.com>

    * Fixed Notein bug when receiving note-off message with positive velocity.
    - rev 1096

2013-05-07 belangeo <belangeo@gmail.com>

    * Added new object: Spectrum, Frequency spectrum analyzer.
    - rev 1095

2013-04-19 belangeo <belangeo@gmail.com>

    * Added new object: CvlVerb, convolution based reverb.
    - rev 1094

-------------------------------------------------------------------------------------

2013-04-13 belangeo <belangeo@gmail.com>

    * Release tag: 0.6.5.
    - rev 1091

2013-04-12 belangeo <belangeo@gmail.com>

    * Added new object: Average, Moving average filter.
    - rev 1090
